--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,10 @@ Updated README, it had bad information about documentation.
 Uploaded a version of the API documentation online:
 http://fletchtronics.net/cdctool-api/
 
-[0.0.3]
+0.0.3
 Added support for interactive mode. Changed CDCLineBuffer so that it can support
 input from any source, not just CDCFile. Added --interactive,-a command line
 option to the cdctool program.
+
+0.0.4
+Two minor syntax issues causing -Wall -Werror to stop the build were fixed.
